Introduce FilePathRegistry, replacing FilenameMap
Signed-off-by: Jason Winning <jason.winning@gmail.com>